--- a/instagram/src/components/PostContainer/PostContainer.css
+++ b/instagram/src/components/PostContainer/PostContainer.css
@@ -1,16 +1,18 @@
 .post-container {
   width: 600px;
-  height: 922px;
+  height: auto;
   margin: 0 auto;
+  margin-bottom: 60px;
+  padding: 15px;
 }
 
 .post-header {
   display: flex;
   flex-direction: row;
-  border: 1px solid lightgrey;
   width: 100%;
   height: 60px;
   padding: 15px;
+  border: 0.1px solid lightgrey;
 }
 
 .user-img {
