--- a/instagram/src/components/SearchBar/SearchBar.css
+++ b/instagram/src/components/SearchBar/SearchBar.css
@@ -2,7 +2,9 @@
   width: 100%;
   display: flex;
   align-items: baseline;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 15px;
+  border: 0.5px solid lightgrey;
 }
 
 .right-logos {
@@ -11,6 +13,15 @@
 
 .left-logos {
   width: 33.33%;
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: flex-end;
+  margin: 15px;
+}
+
+.left-logos i {
+  font-size: 1.5rem;
+  margin-right: 40px;
 }
 
 .cameraLogo {
