--- a/instagram/src/components/PostContainer/PostContainer.css
+++ b/instagram/src/components/PostContainer/PostContainer.css
@@ -12,7 +12,9 @@
   width: 100%;
   height: 60px;
   padding: 15px;
-  border: 0.1px solid lightgrey;
+  border: 1px solid lightgrey;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .user-img {
