Add instagram mobile photo to Login page and margin on App

--- a/instagram/src/components/CommentSection/CommentSection.css
+++ b/instagram/src/components/CommentSection/CommentSection.css
@@ -3,6 +3,7 @@
   padding: 15px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  background-color: white;
 }
 
 .comment-icons {
