--- a/instagram/src/components/SearchBar/SearchBar.css
+++ b/instagram/src/components/SearchBar/SearchBar.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   padding: 15px;
   border: 1px solid lightgrey;
+  background-color: white;
 }
 
 .right-logos {
