--- a/instagram/src/components/PostContainer/PostContainer.css
+++ b/instagram/src/components/PostContainer/PostContainer.css
@@ -15,6 +15,7 @@
   border: 1px solid lightgrey;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  background-color: white;
 }
 
 .user-img {
