--- a/instagram/src/index.css
+++ b/instagram/src/index.css
@@ -1,4 +1,8 @@
+html {
+  background-color: #f9f9f9;
+}
 body {
+  background-color: #f9f9f9;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
